# tuono

./: .eslintrc  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  REPO.md  eslint.config.js  eslintrc.cjs  example.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  spelling_global.txt  tsconfig.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/actions/install-node-dependencies/: action.yml
.github/workflows/: ci-documentation.yml  deploy-documentation.yml  release-on-npm.yml  release.yml  repo-root-ci.yml  rust.yml  spell-checking.yml  typescript.yml
apps/: README.md
apps/documentation/: .eslintrc  Cargo.toml  README.md  package.json  tsconfig.json  tuono.config.ts
apps/documentation/public/: polyfill-db.json
apps/documentation/src/: modules.d.ts
apps/documentation/src/components/accordion/: accordion.tsx
apps/documentation/src/components/breadcrumbs/: breadcrumbs.tsx  index.ts
apps/documentation/src/components/edit-page/: edit-page.tsx  index.ts
apps/documentation/src/components/hero/: hero.module.css  hero.tsx  index.ts
apps/documentation/src/components/mdx-provider/: index.ts  mdx-provider.tsx
apps/documentation/src/components/mdx-provider/mdx-bold/: mdx-bold.tsx
apps/documentation/src/components/mdx-provider/mdx-code/: index.ts  mdx-code.tsx
apps/documentation/src/components/mdx-provider/mdx-h2/: mdx-h2.tsx
apps/documentation/src/components/mdx-provider/mdx-link/: index.ts  mdx-link.tsx
apps/documentation/src/components/mdx-provider/mdx-pre/: index.ts  index.tsx  mdx-pre.module.css  mdx-pre.tsx
apps/documentation/src/components/mdx-provider/mdx-quote/: index.ts  mdx-quote.tsx
apps/documentation/src/components/meta-tags/: index.ts  meta-tags.tsx
apps/documentation/src/components/navbar/: actions.tsx  navbar.tsx
apps/documentation/src/components/navigation-buttons/: index.ts  navigation-buttons.tsx
apps/documentation/src/components/sidebar/: SidebarLink.tsx  config.ts  sidebar-link.module.css  sidebar-link.tsx  sidebar.tsx
apps/documentation/src/components/table-of-content/: get-headings.ts  index.ts  table-of-content.module.css  table-of-content.tsx
apps/documentation/src/components/theme-btn/: index.ts  theme-btn.tsx
apps/documentation/src/routes/: __root.tsx  index.mdx  index.tsx  sitemap.xml.rs
apps/documentation/src/routes/documentation/: __root.tsx  application-state.mdx  cli.mdx  configuration.mdx  contributing.mdx  faq.mdx  getting-started.mdx  how-is-tuono-different.mdx  index.mdx  installation.mdx
apps/documentation/src/routes/tutorial/: __root.tsx  index.mdx
apps/documentation/src/styles/: global.css
benches/: README.md
benches/nextjs-app-router/: package-lock.json  package.json
benches/nextjs-app-router/src/app/: layout.tsx  page.tsx
benches/nextjs-page-router/: ecosystem.config.js  package-lock.json  package.json
benches/nextjs-page-router/src/pages/: index.tsx
benches/tuono/: Cargo.toml  package-lock.json  package.json
benches/tuono/src/routes/: __root.tsx  index.rs  index.tsx
crates/axum_bundler/: Cargo.toml  README.md
crates/axum_bundler/src/: bundle.rs  lib.rs
crates/bundler/: Cargo.toml  README.md
crates/bundler/src/: bundler.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/actions/: build.rs  dev.rs  mod.rs  new.rs
crates/tuono/: Cargo.toml  README.md
crates/tuono/src/: app.rs  cli.rs  lib.rs  main.rs  mode.rs  route.rs  scaffold_project.rs  source_builder.rs  ssg.rs  watch.rs
crates/tuono/src/source_builder/: static_files.rs
crates/tuono/tests/: cli_tests.rs  utils.rs
crates/tuono/tests/cmd/: tuono_build_success.trycmd  tuono_help_success.trycmd
crates/tuono_lib/: Cargo.toml  README.md
crates/tuono_lib/src/: catch_all.rs  internal_handlers.rs  lib.rs  logger.rs  manifest.rs  mode.rs  payload.rs  request.rs  response.rs  server.rs  ssr.rs  vite_reverse_proxy.rs  vite_websocket_proxy.rs
crates/tuono_lib/src/internal_handlers/: vite_reverse_proxy.rs  vite_websocket_proxy.rs
crates/tuono_lib/src/services/: logger.rs
crates/tuono_lib/tuono_lib_macros/: Cargo.toml
crates/tuono_lib/tuono_lib_macros/src/: lib.rs
crates/tuono_lib_macros/: Cargo.toml  README.md
crates/tuono_lib_macros/src/: api.rs  handler.rs  lib.rs  utils.rs
docs/: README.md  tutorial.md
examples/: README.md
examples/mdx/: Cargo.toml  package.json
examples/tuono/: Cargo.toml  README.md  package.json
examples/tuono-api/: .gitignore  Cargo.toml  README.md
examples/tuono-api/.tuono/: client-main.tsx  main.rs  server-main.tsx
examples/tuono-api/src/routes/: index.rs
examples/tuono-app/: Cargo.toml  README.md  package.json  tuono.config.ts
examples/tuono-app/src/routes/: __root.tsx  index.rs  index.tsx
examples/tuono-app/src/routes/api/: health_check.rs
examples/tuono-app/src/styles/: global.css
examples/tuono-tutorial/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  tuono.config.ts
examples/tuono-tutorial/src/components/: PokemonLink.module.css  PokemonLink.tsx  PokemonView.tsx
examples/tuono-tutorial/src/routes/: __root.tsx  index.rs  index.tsx
examples/tuono-tutorial/src/routes/pokemons/: [pokemon].tsx
examples/tuono/src/components/: Button.tsx
examples/tuono/src/routes/: __root.tsx  about.tsx  index.rs  index.tsx
examples/tuono/src/routes/api/: health_check.rs
examples/tuono/src/styles/: global.css
examples/tutorial/: Cargo.toml  README.md  package.json
examples/tutorial/src/: main.rs
examples/tutorial/src/components/: PokemonLink.tsx  PokemonView.module.css
examples/tutorial/src/routes/: __root.tsx  index.rs  index.tsx
examples/tutorial/src/routes/pokemons/: GOAT.rs  [pokemon].rs  [pokemon].tsx  __root.tsx  index.tsx
examples/with-mdx/: Cargo.toml  package.json  tsconfig.json  tuono.config.ts
examples/with-mdx/src/routes/: __root.tsx
scripts/: dev.sh
(+33 files in other folders)
