[package]
name = "tuono_bundler"
version = "0.0.1"
edition = "2021"
authors = ["V. Ageno <valerioageno@yahoo.it>"]

[lib]
name = "bundler"
path = "src/lib.rs"

[dependencies]
watchexec = "4.0.0"
miette = "7.2.0"
watchexec-signals = "3.0.0"
tokio = { version = "1", features = ["full"] }
watchexec-supervisor = "2.0.0"

axum_bundler = { path = "../axum_bundler" }
