[package]
name = "tuono"
version = "0.0.3"
edition = "2021"
authors = ["V. Ageno <valerioageno@yahoo.it>"]
description = "The react/rust fullstack framework"
homepage = "https://github.com/Valerioageno/tuono"
readme = "../../README.md"
license-file = "../../LICENSE.md"
categories = ["web-programming"]
include = [
		"src/*.rs",
		"Cargo.toml"
]

[lib]
name = "tuono"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
watchexec = "4.0.0"
miette = "7.2.0"
watchexec-signals = "3.0.0"
tokio = { version = "1", features = ["full"] }
watchexec-supervisor = "2.0.0"
glob = "0.3.1"

