[package]
name = "tuono_lib"
version = "0.16.2"
edition = "2021"
authors = ["V. Ageno <valerioageno@yahoo.it>"]
description = "Superfast React fullstack framework"
homepage = "https://tuono.dev"
keywords = [ "react", "typescript", "fullstack", "web", "ssr"]
repository = "https://github.com/tuono-labs/tuono"
readme = "../../README.md"
license-file = "../../LICENSE.md"
categories = ["web-programming"]
include = [
		"src/*.rs",
		"Cargo.toml"
]

[features]
full = ["api", "ssr"]
api = []
ssr = [
		"dep:ssr_rs", 
		"dep:erased-serde", 
		"dep:serde_json", 
		"dep:reqwest", 
		"dep:tokio-tungstenite", 
		"dep:tungstenite", 
		"dep:futures-util"
]

[dependencies]
axum = {version = "0.7.5", features = ["json", "ws"]}
axum-extra = {version = "0.9.6", features = ["cookie"]}
tokio = { version = "1.37.0", features = ["full"] }
tuono_lib_macros = {path = "../tuono_lib_macros", version = "0.16.2"}
regex = "1.10.5"
http = "1.1.0"
pin-project = "1.1.7"
tower = "0.5.1"
colored = "2.1.0"
# Check if serde is mandatory for API only project
serde = { version = "1.0.202", features = ["derive"] }
# Check if once_cell is mandatory for API only project
once_cell = "1.19.0"

ssr_rs = { version = "0.7.0", optional = true}
erased-serde = {version = "0.4.5", optional = true}
serde_json = { version = "1.0", optional = true}
serde_urlencoded = {version = "0.7.1" }
reqwest = {version = "0.12.4", features = ["json", "stream"], optional = true}

# Match the same version used internally by axum
tokio-tungstenite = {version = "0.24.0", optional = true}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true}
tungstenite = {version = "0.24.0", optional = true}
tower-http = {version = "0.6.0", features = ["fs"]}

