[package]
name = "tuono_lib_macros"
version = "0.13.3"
edition = "2021"
description = "Superfast React fullstack framework"
homepage = "https://tuono.dev"
keywords = [ "react", "typescript", "fullstack", "web", "ssr"]
repository = "https://github.com/Valerioageno/tuono"
readme = "../../README.md"
license-file = "../../LICENSE.md"
categories = ["web-programming"]
include = [
		"src/*.rs",
		"Cargo.toml"
]

[lib]
crate_type = ["proc-macro"]
proc-marco = true

[dependencies]
syn = { version = "2.0.0", features = ["full"] }
quote = "1.0"
http = "1.1.0"
strum_macros = "0.26.4"
strum = "0.26.3"
